Compiler/src/main/java/Testing/Tests/SemanticTests/AST/failing/StartWithRet.ru
/? Descripción: caso de prueba que verifica que el start no tenga return
/? Salida esperada:
/? ERROR: SEMÁNTICO - SENTENCIAS
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | Linea 10 | COLUMNA 5 | START NO PUEDE TENER RETURN

start{
Int a;
ret a;
}